update simple-component layout and add new images to test

--- a/src/app/modules/articles/simple-article/simple-article.component.html
+++ b/src/app/modules/articles/simple-article/simple-article.component.html
@@ -1,3 +1,26 @@
-<p>
-  simples-article works!
-</p>
+<div class="simpleArticleContainer">
+  <a class="simpleArticleBanner">
+    <img src="../../../../assets/imgs/test2.png">
+  </a>
+  <div class="simpleArticleTexts">
+    <div class="simpleArticleTitle">
+      <a>
+        <h1>Rasterization Algorithms — Computer Graphics</h1>
+      </a>
+    </div>
+    <div class="simpleArticleInformation">
+      <div class="simpletArticleAuthor">
+        <a>
+          <h2>Thiago Luiz Full-stack developer</h2>
+        </a>
+      </div>
+      <div class="simpleArticleStatus">
+        <span class="simpleArticleDate">20 May</span>
+        <span class="simpleArticleTime"> 13 min</span>
+        <span class="simpleArticleIcon" style="color: #757575; font-size: .6rem;">
+          <i class="fas fa-star"></i>
+        </span>
+      </div>
+    </div>
+  </div>
+</div>
