--- a/src/app/modules/home/main/main.component.html
+++ b/src/app/modules/home/main/main.component.html
@@ -1,9 +1,11 @@
 <div class="mainContainer">
   <section class="mostRatedArticles">
     <app-grid-article></app-grid-article>
-    <app-simple-article></app-simple-article>
-    <app-simple-article></app-simple-article>
-    <app-simple-article></app-simple-article>
+    <div class="simplesArticles">
+      <app-simple-article></app-simple-article>
+      <app-simple-article></app-simple-article>
+      <app-simple-article></app-simple-article>
+    </div>
     <app-grid-article></app-grid-article>
     </section>
 </div>
