--- a/src/app/modules/articles/grid-article/grid-article.component.css
+++ b/src/app/modules/articles/grid-article/grid-article.component.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 350px;
-  height: 500px;
+  height: 400px;
+  margin-right: 1.2rem;
 }
 .gridArticleBanner {
   width: inherit;
