--- a/src/app/modules/ui/header/header.component.css
+++ b/src/app/modules/ui/header/header.component.css
@@ -47,11 +47,11 @@
   transition: ease-in-out .2s, border-color ease-in-out .2s, color ease-in-out .2s;
 }
 .navbar-boilerplate .user-image {
+  margin-top: 1px;
   cursor: pointer;
 }
 .navbar-boilerplate .dropdown-toggle, .navbar-boilerplate .user-name {
   cursor: pointer;
-  /* color: #fff; */
   color: #616161;
   transition: all ease-in-out .2s;
 }
@@ -62,24 +62,40 @@
 }
 .navbar-nav > li > .dropdown-menu {
   width: 50px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 3px;
+  border-color: #ccc;
 }
-.dropdown-menu .user-footer {
+.dropdown-menu .user-option {
   display: flex;
   flex-direction: column;
   text-align: center;
+  background-color: #fff;
 }
 .dropdown-menu .profile-option {
+  width: 85%;
+  margin: auto;
   cursor: pointer;
-  margin: 5px;
-  color: #424242;
+  color: #616161;
+  padding: 5px;
+  background-color: #fff;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: transparent;
   transition: all ease-in-out .2s;
 }
 .dropdown-menu .profile-option:hover {
-  background-color: #5e9fdf;
-  color: #fff;
-  /* color: #616161; */
+  border-bottom-color: #ccc;
 }
 @media only screen and (max-width: 768px) {
+  .user-menu {
+    margin-top: 5px;
+  }
+  .navbar-boilerplate .user-image {
+    margin-top: 2px;
+    margin-right: 5px;
+  }
   .navbar-boilerplate .app-singup-link,
   .navbar-boilerplate .app-login-link {
     padding-left: 0px;
