--- a/src/app/modules/ui/header/header.component.html
+++ b/src/app/modules/ui/header/header.component.html
@@ -29,8 +29,13 @@
             <span class="user-name">{{ user.name }}</span>
           </a>
           <ul class="dropdown-menu">
-            <li class="user-footer">
+            <li class="user-option">
               <a [routerLink]="[ '/dashboard/overview']" class="profile-option">Painel</a>
+            </li>
+            <li class="user-option">
+              <a class="profile-option">Novo artigo</a>
+            </li>
+            <li class="user-option">
               <a (click)="logout()" class="profile-option">Sair</a>
             </li>
           </ul>
