--- a/src/app/modules/ui/header/header.component.html
+++ b/src/app/modules/ui/header/header.component.html
@@ -30,10 +30,13 @@
           </a>
           <ul class="dropdown-menu">
             <li class="user-option">
+              <a class="profile-option">Novo artigo</a>
+            </li>
+            <li class="user-option">
               <a [routerLink]="[ '/dashboard/overview']" class="profile-option">Painel</a>
             </li>
             <li class="user-option">
-              <a class="profile-option">Novo artigo</a>
+              <a [routerLink]="[ '/dashboard/profile']" class="profile-option">Conta</a>
             </li>
             <li class="user-option">
               <a (click)="logout()" class="profile-option">Sair</a>
