--- a/src/app/modules/home/main/main.component.html
+++ b/src/app/modules/home/main/main.component.html
@@ -3,9 +3,9 @@
     <app-grid-article></app-grid-article>
     <div class="simplesArticles">
       <app-simple-article></app-simple-article>
-      <app-simple-article></app-simple-article>
-      <app-simple-article></app-simple-article>
+      <app-simple-article style="margin-top: 1.5rem;"></app-simple-article>
+      <app-simple-article style="margin-top: 1.5rem;"></app-simple-article>
     </div>
-    <app-grid-article></app-grid-article>
+    <app-grid-article style="margin-top: 1rem;"></app-grid-article>
     </section>
 </div>
