--- a/src/app/modules/articles/grid-article/grid-article.component.css
+++ b/src/app/modules/articles/grid-article/grid-article.component.css
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: column;
   width: 350px;
-  height: 400px;
-  margin-right: 1.2rem;
+  height: 300px;
+  margin: auto;
 }
 .gridArticleBanner {
   width: inherit;
   text-align: center;
+  overflow: hidden;
 }
 .gridArticleBanner > img {
   height: 150px;
