fix mostRecentArticles layout

--- a/src/app/modules/home/main/main.component.css
+++ b/src/app/modules/home/main/main.component.css
@@ -1,33 +1,40 @@
 .mainContainer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   padding: 2rem;
 }
-.mostRatedArticles {
+
+.mostRecentArticles {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
 }
-.mostRatedArticles > app-grid-article {
-  margin-right: 1rem;
-}
+
 .simplesArticles {
   display: flex;
   flex-direction: column;
-  margin-right: 1rem;
+  margin-bottom: 1rem;
 }
+
 .simpleArticles .simpleArticle {
   margin-top: 1.8rem;
+}
+
+.mostRatedArticles {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 @media only screen and (max-width: 768px) {
   .mainContainer {
     padding: 0rem;
   }
-  .mostRatedArticles {
+  .mostRecentArticles {
     flex-direction: column;
   }
-  .mostRatedArticles > app-grid-article {
+  .mostRecentArticles>app-grid-article {
     margin-right: 0rem;
   }
   .simplesArticles {
