update css main component

--- a/src/app/modules/articles/simple-article/simple-article.component.css
+++ b/src/app/modules/articles/simple-article/simple-article.component.css
@@ -45,3 +45,9 @@
 .simpleArticleIcon > i {
   padding-bottom: .2rem;
 }
+
+@media only screen and (max-width: 768px) {
+  .simpleArticleBanner {
+    margin-right: 0rem;
+  }
+}
