fix dashboard css header-component

--- a/src/app/modules/dashboard/header/header.component.css
+++ b/src/app/modules/dashboard/header/header.component.css
@@ -2,73 +2,92 @@
   font-family: VarelaRound-Regular;
   height: 50px;
   background-color: #1c2d36;
-  /* background-color: #1976d2; */
-  /* background-image: linear-gradient(to right, #1976d2, #5e9fdf); */
 }
+
 .skin-blue .main-header .logo {
   background-color: #1c2d36;
-  /* background-color: #1976d2; */
   color: #fff;
   border-bottom: 0 solid transparent;
 }
+
 .skin-blue .main-header .navbar .sidebar-toggle {
   background-color: transparent;
   padding: 5px;
   transition: all ease-in-out .3s;
 }
+
 .skin-blue .main-header .navbar .sidebar-toggle:hover {
   color: #1976d2;
 }
-
 
 .navbar .dropdown-toggle, .user-name {
   cursor: pointer;
   color: #fff;
   transition: all ease-in-out .3s;
 }
-.navbar .dropdown-toggle:hover,
-.navbar .dropdown-toggle:hover > span {
+
+.navbar-nav>.user-menu .user-image {
+  margin-top: 0px;
+}
+
+.navbar .dropdown-toggle:hover, .navbar .dropdown-toggle:hover>span {
   color: #1976d2;
   background-color: transparent;
 }
-.skin-blue .main-header .navbar .nav > li > a {
+
+.skin-blue .main-header .navbar .nav>li>a {
   color: #fff;
   background-color: transparent;
 }
-.skin-blue .main-header .navbar .nav > li > a:hover {
+
+.skin-blue .main-header .navbar .nav>li>a:hover {
   color: #1976d2;
 }
 
-
-.navbar-nav > li > .dropdown-menu {
+.navbar-nav>li>.dropdown-menu {
   width: 50px;
+  left: 0;
+  padding: 10px;
+  border-radius: 3px;
+  border-color: #ccc;
 }
-.main-header .dropdown-toggle {
-  transition: all ease-in-out .3s;
-}
-.dropdown-menu .user-footer {
+
+.dropdown-menu .user-option {
   display: flex;
   flex-direction: column;
-  text-align: center;
+  background-color: #fff;
 }
+
 .dropdown-menu .profile-option {
+  width: 85%;
+  margin: auto;
   cursor: pointer;
-  margin: 5px;
-  color: #424242;
-  transition: all ease-in-out .3s;
+  color: #616161;
+  padding: 5px;
+  background-color: #fff;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: transparent;
+  transition: all ease-in-out .2s;
 }
+
 .dropdown-menu .profile-option:hover {
-  background-color: #5e9fdf;
-  color: #fff;
+  border-bottom-color: #ccc;
 }
+
 @media only screen and (max-width: 768px) {
   .skin-blue .main-header .navbar .dropdown-menu li a {
-    color: #424242;
+    color: #616161;
   }
   .skin-blue .main-header .navbar .dropdown-menu li a:hover {
-    color: #fff;
+    background-color: transparent;
+  }
+  .navbar-nav>.user-menu .user-image {
+    margin-right: 5px;
+  }
+  .navbar-nav>li>.dropdown-menu {
+    width: 50px;
+    left: auto;
+    right: 0;
   }
 }
-
-
-
