--- a/src/app/modules/home/main/main.component.html
+++ b/src/app/modules/home/main/main.component.html
@@ -8,9 +8,17 @@
     </div>
     <app-grid-article></app-grid-article>
   </section>
-  <section class="mostRatedArticles">
-    <div *ngFor="let article of mostRatedArticles">
-      <app-row-article></app-row-article>
-    </div>
+  <section class="itemsList">
+    <section class="mostRatedArticles">
+      <div *ngFor="let article of mostRatedArticles">
+        <app-row-article></app-row-article>
+      </div>
+    </section>
+    <!-- <section class="mostRecentFoundPosts">
+      <p>Hiiiiiiiiiiiiiiiiiii</p>
+      <p>Hiiiiiiiiiiiiiiiiiii</p>
+      <p>Hiiiiiiiiiiiiiiiiiii</p>
+      <p>Hiiiiiiiiiiiiiiiiiii</p>
+    </section> -->
   </section>
 </div>
