--- a/src/app/modules/articles/grid-article/grid-article.component.html
+++ b/src/app/modules/articles/grid-article/grid-article.component.html
@@ -1,6 +1,9 @@
 <div class="gridArticleContainer">
-  <a class="gridArticleBanner">
-    <img src="../../../../assets/imgs/test.jpeg">
+  <a class="gridArticleBanner" style="
+    width: 350px;
+    height: 150px;
+    background-image: url('/assets/imgs/name3.jpg');
+    background-position: 50% 50% !important;">
   </a>
   <div class="gridArticleTexts">
     <div class="gridArticleTitle">
