--- a/src/app/modules/articles/row-article/row-article.component.html
+++ b/src/app/modules/articles/row-article/row-article.component.html
@@ -1,31 +1,34 @@
 <div class="rowArticleContainer">
-    <div class="rowArticleTexts">
-      <div class="rowArticleTitle">
+  <div class="rowArticleTexts">
+    <div class="rowArticleTitle">
+      <a>
+        <h1>Rasterization Algorithms — Computer Graphics</h1>
+      </a>
+    </div>
+    <div class="rowArticleDescription">
+      <a>
+        <h2>The most useful maps distort what they depict and leave out tons of possible information</h2>
+      </a>
+    </div>
+    <div class="rowArticleInformation">
+      <div class="rowtArticleAuthor">
         <a>
-          <h1>Rasterization Algorithms — Computer Graphics</h1>
+          <h2>Thiago Luiz Full-stack developer</h2>
         </a>
       </div>
-      <div class="rowArticleDescription">
-          <a>
-            <h2>The most useful maps distort what they depict and leave out tons of possible information</h2>
-          </a>
-        </div>
-      <div class="rowArticleInformation">
-        <div class="rowtArticleAuthor">
-          <a>
-            <h2>Thiago Luiz Full-stack developer</h2>
-          </a>
-        </div>
-        <div class="rowArticleStatus">
-          <span class="rowArticleDate">20 May</span>
-          <span class="rowArticleTime"> 13 min</span>
-          <span class="rowArticleIcon" style="color: #757575; font-size: .6rem;">
-            <i class="fas fa-star"></i>
-          </span>
-        </div>
+      <div class="rowArticleStatus">
+        <span class="rowArticleDate">20 May</span>
+        <span class="rowArticleTime"> 13 min</span>
+        <span class="rowArticleIcon" style="color: #757575; font-size: .6rem;">
+          <i class="fas fa-star"></i>
+        </span>
       </div>
     </div>
-    <a class="rowArticleBanner">
-        <img src="../../../../assets/imgs/test2.png">
-      </a>
   </div>
+  <a class="gridArticleBanner" style="
+    width: 150px;
+    height: 150px;
+    background-image: url('/assets/imgs/name1.jpg');
+    background-position: 50% 50% !important;">
+  </a>
+</div>
