--- a/src/app/modules/articles/simple-article/simple-article.component.html
+++ b/src/app/modules/articles/simple-article/simple-article.component.html
@@ -1,6 +1,9 @@
 <div class="simpleArticleContainer">
-  <a class="simpleArticleBanner">
-    <img src="../../../../assets/imgs/test2.png">
+  <a class="simpleArticleBanner" style="
+    width: 350px;
+    height: 150px;
+    background-image: url('/assets/imgs/name2.png');
+    background-position: 50% 50% !important;">
   </a>
   <div class="simpleArticleTexts">
     <div class="simpleArticleTitle">
