update articles layout

--- a/src/app/modules/articles/grid-article/grid-article.component.css
+++ b/src/app/modules/articles/grid-article/grid-article.component.css
@@ -6,12 +6,14 @@
   margin: auto;
 }
 /* .gridArticleBanner {
-  width: inherit;
+  width: 350px;
+  height: 300px;
   text-align: center;
   overflow: hidden;
 }
 .gridArticleBanner > img {
-  height: 150px;
+  max-height: 200px;
+  margin: auto;
 } */
 .gridArticleTexts {
   margin-top: .5rem;
