--- a/src/app/modules/articles/grid-article/grid-article.component.html
+++ b/src/app/modules/articles/grid-article/grid-article.component.html
@@ -1,4 +1,7 @@
 <div class="gridArticleContainer">
+  <!-- <a class="gridArticleBanner">
+    <img src="/assets/imgs/bible.jpg">
+  </a> -->
   <a class="gridArticleBanner" style="
     width: 350px;
     height: 150px;
