--- a/src/app/modules/articles/row-article/row-article.component.html
+++ b/src/app/modules/articles/row-article/row-article.component.html
@@ -25,10 +25,11 @@
       </div>
     </div>
   </div>
-  <a class="gridArticleBanner" style="
+  <a class="rowArticleBanner" style="
     width: 150px;
     height: 150px;
-    background-image: url('/assets/imgs/name1.jpg');
+    background-image: url('/assets/imgs/ci-image3.jpeg');
     background-position: 50% 50% !important;">
+    <!-- <img src="/assets/imgs/ci-image3.jpeg"> -->
   </a>
 </div>
