--- a/src/app/modules/articles/simple-article/simple-article.component.html
+++ b/src/app/modules/articles/simple-article/simple-article.component.html
@@ -1,10 +1,15 @@
 <div class="simpleArticleContainer">
+  <!-- <a class="simpleArticleBanner">
+    <img src="/assets/imgs/ci-image2.png">
+  </a> -->
   <a class="simpleArticleBanner" style="
-    width: 350px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
+    margin-right: 1.5rem;
     background-image: url('/assets/imgs/name2.png');
     background-position: 50% 50% !important;">
   </a>
+
   <div class="simpleArticleTexts">
     <div class="simpleArticleTitle">
       <a>
