--- a/src/app/modules/articles/row-article/row-article.component.html
+++ b/src/app/modules/articles/row-article/row-article.component.html
@@ -25,11 +25,5 @@
       </div>
     </div>
   </div>
-  <a class="rowArticleBanner" style="
-    width: 150px;
-    height: 150px;
-    background-image: url('/assets/imgs/name1.jpeg');
-    background-position: 50% 50% !important;">
-    <!-- <img src="/assets/imgs/ci-image3.jpeg"> -->
-  </a>
+  <a class="rowArticleBanner" style="background-image: url('/assets/imgs/name1.jpeg');"></a>
 </div>
