--- a/src/app/modules/articles/grid-article/grid-article.component.css
+++ b/src/app/modules/articles/grid-article/grid-article.component.css
@@ -5,47 +5,52 @@
   height: 300px;
   margin: auto;
 }
-/* .gridArticleBanner {
+
+.gridArticleBanner {
   width: 350px;
-  height: 300px;
-  text-align: center;
-  overflow: hidden;
+  height: 150px;
+  background-position: 50% 50% !important;
 }
-.gridArticleBanner > img {
-  max-height: 200px;
-  margin: auto;
-} */
+
 .gridArticleTexts {
   margin-top: .5rem;
 }
-.gridArticleTitle > a > h1 {
+
+.gridArticleTitle>a>h1 {
   font-family: LucidaGrandeBold;
   font-size: 1.4rem;
 }
+
 .gridArticleDescription {
   margin-top: 1rem;
 }
-.gridArticleDescription > a > h2 {
+
+.gridArticleDescription>a>h2 {
   color: #757575;
   font-family: LucidaGrande;
   font-size: .85rem;
 }
+
 .gridtArticleAuthor {
   margin-top: 1rem;
 }
-.gridtArticleAuthor > a > h2 {
+
+.gridtArticleAuthor>a>h2 {
   font-family: LucidaGrande;
   font-size: .85rem;
 }
-.gridArticleStatus > span {
+
+.gridArticleStatus>span {
   color: #757575;
   font-family: LucidaGrande;
   font-size: .85rem;
 }
+
 .gridArticleIcon {
   vertical-align: middle;
   margin-left: .5rem;
 }
-.gridArticleIcon > i {
+
+.gridArticleIcon>i {
   padding-bottom: .2rem;
 }
