--- a/src/app/modules/home/main/main.component.html
+++ b/src/app/modules/home/main/main.component.html
@@ -11,7 +11,7 @@
   <section class="itemsList">
     <section class="mostRatedArticles">
       <div *ngFor="let article of mostRatedArticles">
-        <app-row-article></app-row-article>
+        <app-row-article style="margin-bottom: 1rem;"></app-row-article>
       </div>
     </section>
     <!-- <section class="mostRecentFoundPosts">
