--- a/src/app/modules/home/main/main.component.html
+++ b/src/app/modules/home/main/main.component.html
@@ -1,12 +1,22 @@
 <div class="mainContainer">
   <section class="mostRecentArticles">
-    <app-grid-article></app-grid-article>
-    <div class="simplesArticles">
-      <app-simple-article></app-simple-article>
-      <app-simple-article></app-simple-article>
-      <app-simple-article></app-simple-article>
+    <div class="mostRecentTitle">
+      <h1 class="title">Ultimas publicações
+        <!-- <span style="color: #757575; font-size: .7rem;"> -->
+        <span class="icon">
+          <i class="fas fa-chevron-right"></i>
+        </span>
+      </h1>
     </div>
-    <app-grid-article></app-grid-article>
+    <div class="articles">
+      <app-grid-article></app-grid-article>
+      <div class="simplesArticles">
+        <app-simple-article></app-simple-article>
+        <app-simple-article></app-simple-article>
+        <app-simple-article></app-simple-article>
+      </div>
+      <app-grid-article></app-grid-article>
+    </div>
   </section>
   <section class="itemsList">
     <section class="mostRatedArticles">
