create search bar layout

--- a/src/app/modules/articles/grid-article/grid-article.component.html
+++ b/src/app/modules/articles/grid-article/grid-article.component.html
@@ -18,10 +18,11 @@
         </a>
       </div>
       <div class="gridArticleStatus">
-        <span class="gridArticleDate">20 May</span>
+        <span class="gridArticleDate">20 May - </span>
         <span class="gridArticleTime"> 13 min</span>
         <span class="gridArticleIcon" style="color: #757575; font-size: .6rem;">
           <i class="fas fa-star"></i>
+          <!-- <i class="fas fa-clock"></i> -->
         </span>
       </div>
     </div>
