--- a/src/app/modules/articles/row-article/row-article.component.html
+++ b/src/app/modules/articles/row-article/row-article.component.html
@@ -17,7 +17,7 @@
         </a>
       </div>
       <div class="rowArticleStatus">
-        <span class="rowArticleDate">20 May</span>
+        <span class="rowArticleDate">20 May - </span>
         <span class="rowArticleTime"> 13 min</span>
         <span class="rowArticleIcon" style="color: #757575; font-size: .6rem;">
           <i class="fas fa-star"></i>
