--- a/src/app/modules/articles/simple-article/simple-article.component.html
+++ b/src/app/modules/articles/simple-article/simple-article.component.html
@@ -13,10 +13,11 @@
         </a>
       </div>
       <div class="simpleArticleStatus">
-        <span class="simpleArticleDate">20 May</span>
+        <span class="simpleArticleDate">20 May - </span>
         <span class="simpleArticleTime"> 13 min</span>
         <span class="simpleArticleIcon" style="color: #757575; font-size: .6rem;">
           <i class="fas fa-star"></i>
+          <!-- <i class="fas fa-clock"></i> -->
         </span>
       </div>
     </div>
