--- a/src/app/modules/home/main/main.component.html
+++ b/src/app/modules/home/main/main.component.html
@@ -31,10 +31,7 @@
       </div>
     </section>
     <!-- <section class="mostRecentFoundPosts">
-      <p>Hiiiiiiiiiiiiiiiiiii</p>
-      <p>Hiiiiiiiiiiiiiiiiiii</p>
-      <p>Hiiiiiiiiiiiiiiiiiii</p>
-      <p>Hiiiiiiiiiiiiiiiiiii</p>
+      <div></div>
     </section> -->
   </section>
 </div>
