--- a/src/app/modules/ui/header/header.component.css
+++ b/src/app/modules/ui/header/header.component.css
@@ -27,13 +27,13 @@
 }
 
 .simpleArticleIcon {
-  color: #757575;
+  color: #959595;
   font-size: 1rem;
   transition: all ease-in-out .2s;
 }
 
 .simpleArticleIcon:hover {
-  color: #959595;
+  color: #ccc;
 }
 
 .navbar-boilerplate .app-singup-link {
