--- a/src/app/modules/dashboard/header/header.component.html
+++ b/src/app/modules/dashboard/header/header.component.html
@@ -1,13 +1,13 @@
 <div class="skin-blue fixed-top">
   <header class="main-header">
     <a [routerLink]="['/']" class="logo">
-      <span class="logo-mini">CI</span>
+      <!-- <span class="logo-mini">CI</span> -->
+      <span class="logo-mini">
+        <img class="image-logo" src="../../../../assets/imgs/logo.svg" alt="Ci Logo" />
+      </span>
       <span class="logo-lg">
         <b>Ambiente</b> CI
       </span>
-      <!-- <span class="logo-lg">
-        <img class="login-nav-logo" src="../../../../assets/imgs/logo.svg" alt="Angular Logo" />
-      </span> -->
     </a>
     <nav class="navbar navbar-static-top" role="navigation">
       <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
