--- a/src/app/modules/dashboard/header/header.component.css
+++ b/src/app/modules/dashboard/header/header.component.css
@@ -51,7 +51,7 @@
 
 .navbar-nav>li>.dropdown-menu {
   width: 50px;
-  left: 0;
+  left: -2.5rem;
   padding: 10px;
   border-radius: 3px;
   border-color: #ccc;
