--- a/src/app/modules/articles/row-article/row-article.component.html
+++ b/src/app/modules/articles/row-article/row-article.component.html
@@ -11,7 +11,7 @@
       </a>
     </div>
     <div class="rowArticleInformation">
-      <div class="rowtArticleAuthor">
+      <div class="rowArticleAuthor">
         <a>
           <h2>Thiago Luiz Full-stack developer</h2>
         </a>
